@@ -1,5 +1,5 @@
 .TH Eclipse 1 "(c) 2001 Iban HATCHONDO"
-.\"$Id$
+.\"$Id: eclipse.1,v 1.2 2002/06/24 07:33:44 james Exp $
 
 .SH NAME
 eclipse - a window manager in Common Lisp
@@ -63,7 +63,7 @@ go to the previous or next workspace.
 move the pointer up, down, right, or left, depending of the "arrow"
 key you pressed.
 .TP
-.B\-Ctrl-Alt-( z, w, x )\ 
+.B\-Ctrl-Alt-( z, w, x, q, a )\ 
 emulate button-press. Use \fBz\fP for button1 and so on with \fBw\fP
 \fBx\fP. This emulation does not work for re-sizing or moving windows,
 nor does it work on the root-window.
